--- a/index.html
+++ b/index.html
@@ -1187,8 +1187,25 @@
     </div>
   </footer><!-- End Footer -->
 
+<!----Welcome modal starts here--->
+<div id="myWelcomeModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+    
+    <!-- Modal content-->
+    <div class="modal-content">    
+      <div class="modal-header border-bottom-0">
+          <button type="button" class="btn-close" onclick="document.getElementById('myWelcomeModal').style.display='none'"></button>
+      </div> 
+      <div class="modal-body text-center">
+        <h4>Welcome to <br>my Assignment</h4>
+        <p>Feel free to go through it.</p>
+      </div>      
+    </div>
+  </div>
+</div>
+<!--Modal ends here--->
 
-  <!-- External js Files -->
+<!-- External js Files -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 
